第十次作业

--- a/ten/app/src/main/res/values/strings.xml
+++ b/ten/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ten</string>
+    <string name="app_name">18990109-秦嘉</string>
 
     <string name="menu_first">首页</string>
     <string name="menu_second">分类</string>
